Fixing layout issues and improving design

--- a/css/index.css
+++ b/css/index.css
@@ -19,9 +19,6 @@
 .hero .about-me
 {
     position: relative;
-    transform: translate(-50%, -50%);
-    top: 40%;
-    left: 50%;
     width: 100vmin;
     max-width: 90%;
     max-height: 90vh;
@@ -41,12 +38,8 @@
 .hero .about-me blockquote
 {
     /* filter: drop-shadow(2px 2px #333); */
-    position: absolute;
-    transform: translateX(-50%);
-    left: 50%;
     font-size: 1.2em;
     font-weight: 400;
-    width: 90%;
 }
 
 .skills
@@ -199,9 +192,10 @@
 .contact
 {
     background: hsl(var(--main-hue), var(--main-saturation), 11%);
-    padding: 80px 20px 50px 20px;
     height: 100%;
     min-height: 100vh;
+    display: grid;
+    place-items: center;
 }
 
 .contact form
